# rusty_connect_four

./: Cargo.toml
rust-wasm/: Cargo.toml
rust-wasm/src/: board.rs  board_iters.rs  board_state.rs  consts.rs  game_manager.rs  heuristics.rs  layer_generator.rs  lib.rs  tree_analysis.rs  win_check.rs
src/: board.rs  board_iters.rs  board_state.rs  consts.rs  game_manager.rs  generator.rs  heuristics.rs  index.html  layer_generator.rs  lib.rs  log.rs  main.rs  tree_analysis.rs  win_check.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: heuristics.rs  main.rs
src/components/: board.js
src/game_engine/: board.rs  board_iters.rs  board_size.rs  board_state.rs  consts.rs  game_manager.rs  heuristics.rs  layer_generator.rs  mod.rs  monte_carlo.rs  transposition.rs  tree_analysis.rs  tree_size.rs  win_check.rs
src/scripts/: computer.js
src/user_interface/: board.rs  computer.rs  engine_interface.rs  mod.rs  settings.rs  turn_manager.rs
web/: index.html
web/components/: board.js
web/scripts/: computer.js  wasm.js
web/styles/: board.css
