[package]
name = "rusty_connect_four"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
serial_test = "*"

[lib]
crate-type = ["cdylib", "rlib"]